--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         </div>
         <div class="item">
             <div class="image">
-                <a href="javascript:void(0);">
-                <img src="assets/images/coming.png" alt="Coming">
+                <a href="https://api.saya.ninja">
+                <img src="assets/images/coming.png" alt="Rest Api">
                 </a>
             </div>
             <div class="description">
-                <h2>Restme</h2></a>
+                <h2>Rest Api</h2></a>
                 <p>Sebuah website rest api gratis dengan fitur utamanya adalah untuk mengecek atau memvalidasi id beberapa game mobile.</p>
             </div>
         </div>
