--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
         <div class="item">
             <div class="image">
-                <a href="https://api.saya.ninja">
+                <a href="#">
                 <img src="assets/images/coming.png" alt="Rest Api">
                 </a>
             </div>
             <div class="description">
                 <h2>Rest Api</h2></a>
-                <p>Sebuah website rest api gratis dengan fitur utamanya adalah untuk mengecek atau memvalidasi id beberapa game mobile.</p>
+                <p>Sebuah website rest api gratis dengan fitur utamanya adalah untuk memvalidasi id beberapa game online.</p>
             </div>
         </div>
     </div>
