--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="particles-js"></div>
 
     <div class="container">
-        <img src="https://telegra.ph/file/7078075e930d7db41cce4.jpg" alt="Hero" class="profile">
+        <img src="https://avatars.githubusercontent.com/u/87851041" alt="Hero" class="profile">
         <h1>Ridwan Maulana</h1>
         <div class="subheading">
             guasss@yahoo.com
