--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="subheading">
             guasss@yahoo.com
             <div class="social">
-                <a href="https://facebook.com/wzz.id" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://fb.me/wzz.id" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://wa.me/6285156008163" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
