--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="particles-js"></div>
 
     <div class="container">
-        <img src="https://avatars.githubusercontent.com/u/87851041" alt="Hero" class="profile">
+        <img src="https://ik.imagekit.io/ridwanmla/1716485630800.png?updatedAt=1716721030137" alt="x" class="profile">
         <h1>Ridwan Maulana</h1>
         <div class="subheading">
             guasss@yahoo.com
