--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="item">
             <div class="image">
                 <a href="https://saya.ninja">
-                <img src="assets/images/coming.png" alt="Rest Api">
+                <img src="assets/images/rest.png" alt="Rest Api">
                 </a>
             </div>
             <div class="description">
